# gst-plugins-base

gst/http/: meson.build
gst/tcp/: gsthttpsink.c  gstmultihandlesink.c  gstmultihandlesink.h  gstmultisocketsink.c  gstmultisocketsink.h  gsttcpplugin.c  meson.build
